ghc-4335c07/testsuite/tests/typecheck/should_compile/Tc263_Help.hs
{-# LANGUAGE MultiParamTypeClasses, FlexibleInstances #-}

module Tc263_Help where

class C a b where foo :: (a,b)

instance C [Int] b where foo = undefined
