ghc-4335c07/testsuite/tests/typecheck/should_fail/ContextStack1.hs
{-# LANGUAGE UndecidableInstances, FlexibleInstances #-}

module ContextStack1 where

class Cls a where meth :: a

instance Cls [a] => Cls a

t :: ()
t = meth

